# rs-nbu-cli

./: Cargo.toml  Makefile  README.md
src/: currency.rs  main.rs  nbu_api.rs
