[package]
name = "nbu-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
reqwest = { version = "*", features = ["blocking", "json"] }
serde = { version = "*", features = ["derive"] }
