[package]
name = "nbu-rs"
version = "0.2.0"
edition = "2021"


[profile.dev]
opt-level = 0

[profile.release]
lto = true
codegen-units = 1
strip = true      # Automatically strip symbols from the binary.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
reqwest = { version = "*", features = ["blocking", "json"] }
serde = { version = "*", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
